--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,40 @@
+body {
+    margin: 0;
+    padding: 0;
+    font-size: 16px;
+}
 
+h1, p {
+    margin: 0;
+}
+
+.header {
+    background: #1488CC; 
+    background: -webkit-linear-gradient(to right, #2B32B2, #1488CC);
+    background: linear-gradient(to right, #2B32B2, #1488CC);
+    height: 10vh;
+}
+
+.container {
+    height: 90vh;  
+    display: flex;
+    flex-direction: column;
+}
+
+.nav {
+    margin-top: auto;
+    display: flex;
+    justify-content: space-around;
+    border-top: .5px solid #1488CC;
+    padding: 1em 2em;
+}
+
+.link {
+    text-decoration: inherit;
+    color: inherit;
+    font-size: 1.5rem;
+}
+
+.link:focus {
+    color: #1488CC;
+}
