--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@ h1, p {
 
 
 .home {
-    height: 70vh;
+    height: 80%;
     text-align: center;
     padding: 2em;
     display: flex;
@@ -63,7 +63,7 @@ h1, p {
 }
 
 li {
-    margin-top: 10px;
+    margin-top: 16px;
     font-size: 1.2em;
 }
 
@@ -72,7 +72,7 @@ li {
 }
 
 label {
-    margin-top: 60%;
+    /* margin-top: 60%; */
     font-size: 1.5rem;
     color: #1488CC;
     font-weight: bold;
