--- a/src/App.css
+++ b/src/App.css
@@ -80,6 +80,8 @@ label {
 
 .submit {
     margin-top: 15px;
+    margin-left: 10%;
+    margin-right: 10%;
     font-size: 1.5rem;
     font-weight: 600px;
     color: black;
