--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,11 @@ h1, p {
     height: 10vh;
 }
 
+.footer {
+    height: 10vh;
+    background: whitesmoke;
+}
+
 .container {
     height: 90vh;  
     display: flex;
