updated footer height

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ h1, p {
 }
 
 .footer {
-    height: 13vh;
+    height: 15%;
     background: whitesmoke;
     text-align: center;
     font-size: .6rem;
