--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,8 @@ h1, p {
     justify-content: space-around;
     border-top: .5px solid #1488CC;
     padding: .6em 2em 1em 2em;
+    top: 15px;
+    order: fixed;
 }
 
 .link {
