--- a/src/App.css
+++ b/src/App.css
@@ -108,13 +108,17 @@ label {
 /* ---------------------CARDS PAGE------------------------------------------- */
 
 .card {
-    margin: 10% 7% 0 7%;
-    border: .5px solid black;
+    margin: 10% 14% 0 14%;
+    border-top: 1px solid gray;
+    border-right: 1px solid gray;
+    border-bottom: 1px solid gray;
+    border-left: 1px solid gray;
     padding: 25px 15px;
     text-align:justify;
-    border-radius: 5px;
-    border-color: #1488CC;
-    box-shadow: 1.8px 1.8px #1488CC;
+    border-top-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    /* border-color: #1488CC; */
+    box-shadow: 1.8px 1.8px black;
     background: whitesmoke;
 }
 
