--- a/src/App.css
+++ b/src/App.css
@@ -117,8 +117,8 @@ label {
     text-align:justify;
     border-top-right-radius: 20px;
     border-bottom-left-radius: 20px;
-    /* border-color: #1488CC; */
-    box-shadow: 1.8px 1.8px black;
+    border-color: #1488CC;
+    box-shadow: 1.8px 1.8px darkgray;
     background: whitesmoke;
 }
 
