--- a/src/App.css
+++ b/src/App.css
@@ -118,8 +118,8 @@ label {
     border-top-right-radius: 20px;
     border-bottom-left-radius: 20px;
     border-color: #1488CC;
-    box-shadow: 1.8px 1.8px darkgray;
-    background: whitesmoke;
+    box-shadow: 2.5px 2.5px rgba(35, 31, 32, .1);
+    background: white;
 }
 
 .card p {
