--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,16 @@ body {
     margin: 0;
     padding: 0;
     font-size: 16px;
+    font-family: 'Source Sans Pro', sans-serif; 
 }
 
 h1, p {
     margin: 0;
 }
+
+/* -----Typography------ */
+
+/* ------------- */
 
 .header {
     background: #1488CC; 
