--- a/src/App.css
+++ b/src/App.css
@@ -123,7 +123,7 @@ label {
     border-top-right-radius: 20px;
     border-bottom-left-radius: 20px;
     border-color: #1488CC;
-    box-shadow: 2.5px 2.5px rgba(35, 31, 32, .1);
+    box-shadow: 2.5px 2.5px 2.5px 2.5px rgba(35, 31, 32, .1);
     background: white;
 }
 
