--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-size: 16px;
-    font-family: 'Source Sans Pro', sans-serif; 
+    font-family: monospace;
 }
 
 h1, p {
@@ -14,10 +14,14 @@ h1, p {
 /* ------------- */
 
 .header {
-    background: #1488CC; 
-    background: -webkit-linear-gradient(to right, #2B32B2, #1488CC);
-    background: linear-gradient(to right, #2B32B2, #1488CC);
-    height: 10vh;
+    text-align: center;
+    padding: 5%;
+    letter-spacing: .1em;
+    text-shadow: 1px 1px gray;
+    border-bottom: .5px solid #1488CC;
+    font-size: .9rem;
+    font-weight: bolder;
+    font-family: monospace;
 }
 
 .footer {
@@ -100,7 +104,7 @@ label {
     margin-right: 10%;
     font-size: 1.5rem;
     font-weight: 600px;
-    color: black;
+    color: whitesmoke;
     padding: 5px;
     letter-spacing: .07em;
     border-radius: 500px;
