--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@ h1, p {
     font-size: .9rem;
     font-weight: bolder;
     font-family: monospace;
+    border-image: linear-gradient(to left, black, blue) 1;
 }
 
 .footer {
@@ -43,6 +44,7 @@ h1, p {
     display: flex;
     justify-content: space-around;
     border-top: .5px solid #1488CC;
+    border-image: linear-gradient(to left, black, blue) 1;
     padding: .6em 2em 1em 2em;
     top: 15px;
     order: fixed;
@@ -130,6 +132,8 @@ label {
     box-shadow: 2.5px 2.5px 2.5px 2.5px rgba(35, 31, 32, .1);
     background: white;
 }
+
+
 
 .card p {
     margin-top: 5px;
