--- a/src/App.css
+++ b/src/App.css
@@ -19,12 +19,10 @@ h1, p {
     letter-spacing: .1em;
     text-shadow: 1px 1px gray;
     border-bottom: .5px solid #1488CC;
-    border-bottom-left-radius: 100px;
-    border-bottom-right-radius: 100px;
     font-size: .9rem;
     font-weight: bolder;
     font-family: monospace;
-    /* border-image: linear-gradient(to left, black, #1488cc) 1; */
+    border-image: linear-gradient(to left, #1488cc, black, #1488cc) 1;
 }
 
 .footer {
@@ -46,13 +44,12 @@ h1, p {
     display: flex;
     justify-content: space-around;
     border-top: .5px solid #1488CC;
-    border-top-left-radius: 100px;
-    border-top-right-radius: 100px;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
     /* border-image: linear-gradient(to left, black, #1488cc) 1; */
     padding: .6em 2em 1em 2em;
     top: 15px;
     order: fixed;
-
 }
 
 .link {
@@ -63,6 +60,10 @@ h1, p {
 
 .link:focus {
     color: #1488CC;
+    border: 1px solid white;
+    border-radius: 50%;
+    padding: 5px;  
+    box-shadow: 1.5px 1.5px 1.5px 1.5px rgba(35, 31, 32, .1);
 }
 
 
